2013-08-21  Joseph Myers  <joseph@codesourcery.com>

	[BZ #15797]
	* math/s_fdim.c (__fdim): Check for infinite arguments if result
	is infinite, not alongside NaN test.
	* math/s_fdimf.c (__fdimf): Likewise.
	* math/s_fdiml.c (__fdiml): Likewise.
	* math/libm-test.inc (fdim_test_data): Add more tests.  Test that
	errno is unchanged.

2013-07-23  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ #15867]
	* sysdeps/powerpc/powerpc32/backtrace.c (__backtrace): Handle signal
	trampoline stack frame information.
	* sysdeps/powerpc/powerpc64/backtrace.c (__backtrace): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/libc-vdso.h
	(__vdso_sigtramp_rt64): New variable: PPC64 signal trampoline.
	(__vdso_sigtramp32): New variable: PPC32 signal trampoline.
	(__vdso_sigtramp_rt32): New variable: PPC32 signal trampoline.
	* sysdeps/unix/sysv/linux/powerpc/init-first.c
	(_libc_vdso_platform_setup): Initialize the signal trampolines.
	* debug/tst-backtrace5.c (fn): Add an option set modify sigaction
	sa_flags value.
	* debug/tst-backtrace6.c: New file: check backtrace for signal frames,
	interrupting a syscall and set with option SA_SIGINFO.

2013-08-20  Joseph Myers  <joseph@codesourcery.com>

	[BZ #15531]
	* math/s_cproj.c (__cproj): Only return an infinity if one part of
	argument is infinite.
	* math/s_cprojf.c (__cprojf): Likewise.
	* math/s_cprojl.c (__cprojl): Likewise.
	* sysdeps/ieee754/ldbl-128ibm/s_cprojl.c (__cprojl): Likewise.
	* math/libm-test.inc (cproj_test_data): Add more tests.

	* sysdeps/unix/sysv/linux/mmap64.c: Include <string.h>.

	* sysdeps/unix/sysv/linux/mmap64.c (__mmap64)
	[MMAP2_PAGE_SHIFT == -1]: Use __getpagesize to determine page
	size.  Use __ffs to determine corresponding shift.

2013-08-20  Andreas Arnez  <arnez@linux.vnet.ibm.com>

	* elf/setup-vdso.h (setup_vdso): Fix missing string termination.

2013-08-16  Florian Weimer  <fweimer@redhat.com>

	[BZ #14699]
	CVE-2013-4237
	* sysdeps/posix/dirstream.h (struct __dirstream): Add errcode